--- a/Labs/Lab 1/Lab 1 - In class.Rmd
+++ b/Labs/Lab 1/Lab 1 - In class.Rmd
@@ -7,6 +7,8 @@ output:
     smooth_scroll: yes
     toc: yes
     toc_float: yes
+    theme: journal #theme I like... pick your own
+    highlight: zenburn
 date: "2023-06-19"
 ---
 
