--- a/Labs/Lab 6/Lab 6 - In class.Rmd
+++ b/Labs/Lab 6/Lab 6 - In class.Rmd
@@ -7,6 +7,8 @@ output:
     smooth_scroll: yes
     toc: yes
     toc_float: yes
+    theme: journal
+    highlight: zenburn
 date: "2023-06-19"
 ---
 
